# Equipo-4-PP1-CSJ-2C-2025

proyecto_datos/: Facturas emitidas .csv  Makefile  README.md  pyproject.toml
proyecto_datos/data/: Adm- Rep Cta Ctte empresas.csv  Adm- Rep Facturas Emitidas.csv  Administración - Reporte Cta Ctte empresas.csv  SAP- Rep Deudores.csv  Tabla Empresas.csv
proyecto_datos/data/ interim/: Facturas emitidas .csv  SAP- Deudores .csv  cta_cte_limpieza .csv
proyecto_datos/data/processed/: Adm- Rep Cta Ctte empresas.csv  Adm- Rep Facturas Emitidas.csv  Objetivo 5 .xlsx  SANATORIO SAN JORGE.pbix  SAP- Rep Deudores.csv  Tabla Empresas.csv  Tiempo entre prestación y facturación.csv  cta_cte_limpieza.csv  tabla combinada facturas emitidas-cta corriente.csv
proyecto_datos/data/raw/: Administración - Reporte Cta Ctte empresas.csv  Administración - Reporte Facturas emitidas a empresas - FACTURAS EMITIDAS.csv  SAP - Reporte Deudores.csv
proyecto_datos/docs/: mkdocs.yml
proyecto_datos/docs/docs/: index.md
proyecto_datos/proyecto/: __init__.py  dataset.py  features.py  plots.py
proyecto_datos/proyecto/modeling/: predict.py  train.py
proyecto_datos/references/: Diccionario_de_datos_clinica.csv
