[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto"
version = "0.0.1"
description = "analisis de datos y generaci\u00f3n de indicadores"
authors = [
  { name = "bruno" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["proyecto"]
include = ["pyproject.toml", "proyecto/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto"]
force-sort-within-sections = true

